# katsumoto

./: .dockerignore  .gitignore  AGENTS.md  AVANCE_GRE.md  DOCKER.md  Dockerfile  Dockerfile.dev  FASE3A_STATUS.md  FASE3_PLAN.md  PLAN_ACTIVACION_AUTOUPDATE.md  PLAN_AUTOUPDATE_FIXES.md  PLAN_GRE_REST_API.md  PLAN_IMPRESION_TERMICA_TAURI.md  PLAN_NOTAS_CREDITO.md  PROMPT.md  PROMPT_FASE3A_C14N_FIX.md  PROMPT_GRE_REST_API.md  PROMPT_IMPRESION_TERMICA_TAURI.md  PROMPT_NOTAS_CREDITO.md  README.md  deno.json  docker-compose.dev.yml  docker-compose.yml  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json  vite.config.ts
.github/workflows/: release.yml
.playwright-mcp/: page-2026-04-10T17-09-37-134Z.yml  page-2026-04-10T17-19-59-959Z.yml  page-2026-04-10T23-08-12-883Z.yml  page-2026-04-10T23-08-37-499Z.yml  page-2026-04-11T20-18-54-136Z.yml  page-2026-04-11T22-20-43-168Z.yml
OTROS/: Inventario de referencia.xlsx
docs/: 01-signing-keys.md  02-release.md  03-deployment.md  04-architecture.md  05-white-screen-fix.md
scripts/: generate-districts.mjs  sunat_direct_smoke.ts
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entitlements/: macOS.plist
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  printer.rs  update_flag.rs
src/components/: BranchSelector.tsx  CategoryImageManager.tsx  CategoryTreeFilter.tsx  CustomerLookup.tsx  ErrorBoundary.tsx  HelpHint.tsx  ImageUpload.tsx  Layout.tsx  ProductImage.tsx  (+4 more)
(+233 files in other folders)
