[package]
name = "katsumoto-pos"
version = "2.0.1"
description = "Katsumoto POS - United Parts Group"
authors = ["United Parts Group"]
edition = "2021"

[lib]
name = "katsumoto_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serialport = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
